nginx-demo/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  #type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      #nodePort: 30000
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
      #nodePort: 30001
