nginx-demo/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: nginx.dev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
